# Data-Science

./: README.md  blog_draft_forex_etl.md  how_to_start_forex_pipeline.md
Data-Engineering/ETL/: pyproject.toml
Data-Engineering/ETL/forex/: README.md  critical_timezone.py  how_to_start_forex_pipeline.md
Data-Engineering/ETL/forex/eda/eda_config/: eda_config.py
Data-Engineering/ETL/forex/etl/: CandlestickETL.py  EconomicCalendarETL.py  PositioningETL.py  SwapRateETL.py  models.py
Data-Engineering/ETL/forex/etl/config/: database_config.py  finnhub_config.py  schema_config.py
Data-Engineering/ETL/forex/etl/pipelines/: CandlestickPipeline.py  ForwardFillInator.py
Data-Engineering/ETL/forex/etl/pipelines/papermill/: ETL-Oanda-candlestick-data.ipynb  prepare-ff-data.ipynb
Data-Engineering/ETL/forex/flows/: candlestick_flow.py  economic_calendar_flow.py  forward_fill_flow.py  positioning_flow.py  serve.py  swap_rate_flow.py
Data-Engineering/ETL/forex/graphify-out/cache/: stat-index.json
Data-Engineering/ETL/forex/oanda/: headers.py
Data-Engineering/ETL/forex/oanda/config/: price_type_map.py
Data-Engineering/ETL/forex/pipelines/: generate_command_list_and_crontab.ipynb  pipeline-outline.ipynb
Data-Engineering/ETL/forex/tests/: test_critical_timezone.py  test_economic_calendar_etl.py  test_forward_fill_inator.py  test_models.py  test_positioning_etl.py  test_secrets_isolation.py  test_swap_rate_etl.py
Data-Engineering/ETL/graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
Data-Engineering/ETL/scripts/: recompute_forward_fill_history.py
Forecasting/: README.md
Forecasting/agentic-ts-toolkit/: .gitignore  AGENTS.md  CLAUDE.md  README.md  openclaw.config.snippet.jsonc  pyproject.toml
Forecasting/agentic-ts-toolkit/blog-posts/: introducing-agentic-ts-toolkit.md  ts-analyst-gets-a-statistics-degree.md  ts-forecaster-shows-its-work.md
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/: __init__.py
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/analyst/: analysis_tools.py  server.py
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/deploy/: forecast_tools.py  server.py
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/forecaster/: model_tools.py  server.py
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/monitor/: server.py
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/retrain/: retrain_tools.py  server.py
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/skills/ts-analyst/: SKILL.md
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/skills/ts-deploy/: SKILL.md
Forecasting/agentic-ts-toolkit/src/agentic_ts_toolkit/skills/ts-forecaster/: SKILL.md
Forecasting/agentic-ts-toolkit/tests/: test_analyst_tools.py  test_data_prep.py  test_deploy_tools.py  test_forecaster_tools.py  test_monitor_tools.py  test_retrain_tools.py
(+11 files in other folders)
