[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forex-etl"
version = "0.1.0"
description = "Oanda forex OHLCV ingestion pipeline for InfluxDB"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "prefect>=3.0",
    "pydantic>=2.0",
    "tenacity>=8.2",
    "influxdb-client>=1.36",
    "boto3>=1.28",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["forex"]
