[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ts-toolkit"
version = "0.1.0"
description = "Agentic time series analysis, backtesting, deployment, and monitoring tools, exposed as FastMCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["time-series", "forecasting", "mcp", "agents", "openclaw", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
analyst = ["statsmodels>=0.14"]
forecaster = ["statsmodels>=0.14", "scikit-learn>=1.4"]
deploy = ["statsmodels>=0.14", "scikit-learn>=1.4"]
monitor = ["scipy>=1.11"]
retrain = []
all = ["statsmodels>=0.14", "scikit-learn>=1.4", "scipy>=1.11"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://example.com/agentic-ts-toolkit"
Repository = "https://example.com/agentic-ts-toolkit"

# Console scripts: after `pip install`, these run each layer's MCP server
# directly, so OpenClaw (or any MCP client) can point its config at the
# installed command instead of an absolute path to a .py file.
[project.scripts]
ts-analyst-server = "agentic_ts_toolkit.analyst.server:main"
ts-forecaster-server = "agentic_ts_toolkit.forecaster.server:main"
ts-deploy-server = "agentic_ts_toolkit.deploy.server:main"
ts-monitor-server = "agentic_ts_toolkit.monitor.server:main"
ts-retrain-server = "agentic_ts_toolkit.retrain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ts_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
